parser almost done with exception .. improvement is remain